--- a/css/sub1_1.css
+++ b/css/sub1_1.css
@@ -34,7 +34,7 @@
 
 #poster .pos_info { display: flex; gap: 50px; width: 100%; height: 100%;} 
 
-#poster .pos_img { width: calc(100% / 2); height: 100%;}
+#poster .pos_img { width: calc(100% / 2); height: 100%; max-height: 700px;}
 
 #poster .pos_txt { width: calc(100% / 2); height: 100%; padding-top: 80px;}
 
@@ -49,7 +49,7 @@
 
 @media (max-width:1600px) {
     #poster .pos_info { width: 100%;}
-    #poster .pos_img { width: 100%; height: 100%;}
+    #poster .pos_img { width: 100%; height: 100%; max-height: 700px;}
     #poster .pos_img img { display: block; width: 100%; height: 100%;}
 }
 
